fix top message alignment

--- a/src/components/Global/TopMessage/index.scss
+++ b/src/components/Global/TopMessage/index.scss
@@ -6,7 +6,7 @@
   background-color: #f9dd87;
 
   @media (max-width: 600px) {
-    padding: 0;
+    padding: 5px;
   }
 
   h1 {
